<resources>
    <string name="app_name">Pendaftaran Pasien Puskesmas</string>
    <string name="bintang">*</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_kunjungan">Tanggal Kunjungan</string>
    <string name="daftar">Daftar</string>
    <string name="silahkan_isi_form_pendaftaran">Silahkan Isi Form Pendaftaran</string>
    <string name="terima_kasih_telah_daftar">Terima Kasih Telah Daftar</string>
    <string name="equals">=</string>
</resources>
